fix: fix scrollbars overflow

--- a/components/badge.css
+++ b/components/badge.css
@@ -160,3 +160,9 @@
 .avatar-container .language-markup {
   height: 10rem;
 }
+
+
+.badge-div .language-markup {
+  overflow-y: hidden;
+  overflow-x: scroll;
+}
